<resources>
    <string name="app_name" translatable="false">Coincida</string>
    <string name="exit_tips">再按一次退出程序</string>
    <string name="homepage_tab_text_mall">钱包</string>
    <string name="homepage_tab_text_mine">我</string>
    <string name="mine_title">我</string>
    <string name="property_drawer_qrcode_scanner">扫一扫</string>
    <string name="property_drawer_create_wallet">创建钱包</string>
    <string name="create_fail">创建失败</string>
    <string name="confirm_payment">确认付款</string>
    <string name="confirm_payment_tip">dapp 正在请求一个动作, 这可能会从您的钱包中取款,请确保您信任此网站.</string>
    <string name="miner_fee_not_enough">您没有足够的%1$s来支付这笔矿工费,\n将至少%2$s存入您的钱包,然后重试</string>
    <string name="create_wallet_name_hint">钱包名称</string>
    <string name="Signature_Request">签名请求</string>
    <string name="add_net_work">切换网络节点</string>
    <string name="switch_to">切换到</string>
    <string name="Select_a_coin">选择一种代币</string>
    <string name="Signature_Request_tip">签名可用于证明您拥有此钱包帐户,允许资产转移或用于其他目的. 仅签署来自您信任的 DApp 的消息.</string>
    <string name="create_wallet_pwd_hint">密码</string>
    <string name="create_wallet_pwd_again_hint">重复密码</string>
    <string name="create_wallet_pwd_reminder_info_hint">密码提示信息(可不填)</string>
    <string name="create_wallet_agreement_reminder">我已经仔细阅读并同意</string>
    <string name="create_wallet_agreement">服务及隐私条款</string>
    <string name="create_wallet_name_repeat_tips">钱包名称重复</string>
    <string name="create_wallet_name_input_tips">请输入钱包名称</string>
    <string name="create_wallet_pwd_input_tips">密码不能为空</string>
    <string name="create_wallet_pwd_confirm_input_tips">密码不一致，请重新输入</string>
    <string name="create_wallet_alert1">* 密码用于隐私保护和交易授权，强度非常重要</string>
    <string name="create_wallet_alert2">* 登链钱包不存储密码秘钥，也无法帮您找回，请务必牢记</string>
    <string name="property_total_assets_cny">总资产(¥)</string>
    <string name="property_total_assets_usd">总资产($)</string>
    <string name="property_approximate">≈</string>
    <string name="mine_wallet_manage">钱包管理</string>
    <string name="contact_us">联系我们</string>
    <string name="switch_network_node">切换网络节点</string>
    <string name="Add_custom_token">添加自定义token</string>
    <string name="Search_coin">搜索代币</string>
    <string name="Suggested">推荐</string>
    <string name="all_coins">所有代币</string>
    <string name="selector_token">选择代币</string>
    <string name="search_result">搜索结果</string>
    <string name="mnemonic_backed_up">助记词已经备份</string>
    <string name="mine_trade_record">交易记录</string>
    <string name="mine_msg_center">消息中心</string>
    <string name="mine_contracts">联系人</string>
    <string name="mine_system_setting">系统设置</string>
    <string name="mine_personal_center">个人中心</string>
    <string name="mine_help_center">技术交流与帮助</string>
    <string name="mine_about_us">关于我们</string>
    <string name="add_new_property_title">添加新资产</string>
    <string name="search_toolbar_cancel">取消</string>
    <string name="cancel_btn">取消</string>
    <string name="sure_btn">确定</string>
    <string name="go_set">去设置</string>
    <string name="change_success">切换成功</string>
    <string name="edit_website">请输入网址</string>
    <string name="choose_browser">请选择浏览器</string>
    <string name="no_browser">链接错误或无浏览器</string>
    <string name="choose_share_app">选择分享应用</string>
    <string name="gathering_qrcode_title">收款码</string>
    <string name="gathering_qrcode_share">分享</string>
    <string name="gathering_qrcode_gathering_money">收款金额</string>
    <string name="gathering_qrcode_copy_gathering_address">复制收款地址</string>
    <string name="gathering_qrcode_copy_success">已复制</string>
    <string name="Receiving_address">收款地址</string>
    <string name="copy_wallet_address">粘贴钱包地址</string>
    <string name="amount">金额</string>
    <string name="Import_wallet_successfully">导入钱包成功</string>
    <string name="Failed_to_import_wallet">导入钱包失败</string>
    <string name="Apply_Permission">申请权限</string>
    <string name="disabling_permission">禁用权限会导致APP功能无法正常使用是否前往手动授予该权限</string>
    <string name="contact_no_data">暂时没有联系人</string>
    <string name="transfer_title_confirm">转账详情</string>
    <string name="transfer_title">转账</string>
    <string name="transfer_address">收款人钱包地址</string>
    <string name="transfer_money">转账金额</string>
    <string name="transfer_remark">备注</string>
    <string name="transfer_gas_cost">矿工费用</string>
    <string name="transfer_gas_price">自定义 Gas Price</string>
    <string name="transfer_gas">自定义 Gas</string>
    <string name="transfer_advanced_setting">高级选项</string>
    <string name="transfer_hex_data">十六进制数据</string>
    <string name="transfer_next">下一步</string>
    <string name="transfer_gas_slow">慢</string>
    <string name="transfer_gas_quick">快</string>
    <string name="transfer_ether_unit">&#160;ether</string>
    <string name="property_detail_title">ETC</string>
    <string name="property_detail_transfer">转账</string>
    <string name="property_detail_gathering">收款</string>
    <string name="wallet_manager_create_wallet">创建钱包</string>
    <string name="wallet_manager_load_wallet">导入钱包</string>
    <string name="news_center_all_read">全部已读</string>
    <string name="news_center_title">消息中心</string>
    <string name="system_setting_title">系统设置</string>
    <string name="system_setting_language">多语言</string>
    <string name="system_setting_currency">货币单位</string>
    <string name="system_setting_net">网络设置</string>
    <string name="system_setting_gesture">手势密码</string>
    <string name="language_setting_chinese">简体中文</string>
    <string name="language_setting_English">English</string>
    <string name="language_setting_vi">Việt Nam</string>
    <string name="language_setting_save">保存</string>
    <string name="change_ssuccess">切换成功</string>
    <string name="finished">已完成</string>
    <string name="pending">代办</string>
    <string name="net_setting_main">Mainnet（主网）</string>
    <string name="net_setting_kovan">Kovan 测试网络</string>
    <string name="net_setting_ropsten">Ropsten 测试网络</string>
    <string name="net_setting_local_dev"> 本地测试网络</string>
    <string name="net_setting_sbc_main"> SBC网络(主网)</string>
    <string name="net_setting_sbc_test"> SBC网络(测试网)</string>
    <string name="currency_unit_setting_cny">CNY</string>
    <string name="currency_unit_setting_usd">USD</string>
    <string name="web3_setting_wallet_service_url">WALLET SERVICE URL</string>
    <string name="web3_setting_wallet_service_url_hint">https://web3.token.im</string>
    <string name="web3_setting_reset_url">设置为默认的URL</string>
    <string name="trading_record_title">交易记录</string>
    <string name="switch_wallet_title">切换账户</string>
    <string name="wallet_backup_tips1">最后一步：立即备份你的钱包！</string>
    <string name="wallet_backup_tips2">备份钱包：导出「助记词」并抄写到安全的地方，千万不要保存到网络上，然后尝试转入、转出小额资产开始使用.</string>
    <string name="wallet_backup_backup_btn">备份钱包</string>
    <string name="wallet_backup_skip_btn">跳过</string>
    <string name="wallet_backup_backup_help">查看备份详细教程</string>
    <string name="input_pwd_dialog_tip">请输入密码</string>
    <string name="input_pwd_delete_tip">请慎重，此操作无法撤销</string>
    <string name="input_pwd_dialog_confirm">确认</string>
    <string name="will_recover_wallet">您将恢复您的身份钱包</string>
    <string name="sign_message">确认</string>
    <string name="mnemonic_backup_title">备份确认</string>
    <string name="next">下一步</string>
    <string name="account_settings">设置</string>
    <string name="backup_Mnemonic">备份助记词</string>
    <string name="system_version">系统版本</string>
    <string name="transaction_password">交易密码</string>
    <string name="create_success">创建钱包成功</string>
    <string name="about_us">用户协议</string>
    <string name="change_language">更换语言</string>
    <string name="loading">正在加载</string>
    <string name="other">其他</string>
    <string name="home_amount_manage">首页资产管理</string>
    <string name="custom_token">自定义代币</string>
    <string name="home_hot_amount">热门资产</string>
    <string name="about_wallet">关于钱包</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="Terms_of_Servers">服务条款</string>
    <string name="no_camara">无法拍照</string>
    <string name="no_camara_tip">您未授予拍照权限</string>
    <string name="mnemonic_backup_tips1">抄写下你的钱包助记词</string>
    <string name="mnemonic_backup_tips2">助记词用于回复钱包或重置钱包密码，降它准确的抄写到纸上，并存放在只有你知道的安全的地方。</string>
    <string name="mnemonic_backup_alert_tips">如果有人获取你的助记词将直接获取你的资产！请抄写下助记词并存放在安全的地方。</string>
    <string name="mnemonic_backup_alert_btn">知道了</string>
    <string name="mnemonic_backup_alert_title">请勿截图</string>
    <string name="verify_backup_tip1">确认你的钱包助记词</string>
    <string name="verify_backup_tip2">请按顺序点击助记词，以确认你的备份助记词正确。</string>
    <string name="verify_backup_failed">备份失败，请检查你的助记词</string>
    <string name="load_wallet_title">导入钱包</string>
    <string name="load_wallet_btn">开始导入</string>
    <string name="load_wallet_indicator_mnemonic">助记词</string>
    <string name="load_wallet_indicator_official">官方钱包</string>
    <string name="load_wallet_indicator_private_key">私钥</string>
    <string name="load_wallet_indicator_observer">观察</string>
    <string name="load_wallet_by_mnemonic_hint">请输入助记词，并且使用空格分隔</string>
    <string name="load_wallet_by_mnemonic_input_tip">请检查您的助记词</string>
    <string name="load_wallet_by_mnemonic_standard">m/44\'/60\'/0\'/0/0</string>
    <string name="load_wallet_by_mnemonic_standard_ledger">m/44\'/60\'/0\'/0</string>
    <string name="load_wallet_by_mnemonic_standard_custom">m/44\'/60\'/1\'/0/0</string>
    <string name="load_wallet_by_mnemonic_standard_jaxx_option">m/44\'/60\'/0\'/0/0 Jaxx,Metamask(ETH)</string>
    <string name="load_wallet_by_mnemonic_standard_ledger_option">m/44\'/60\'/0\'/0 Ledger (ETH)</string>
    <string name="load_wallet_by_mnemonic_standard_custom_option">m/44\'/60\'/1\'/0/0 自定义路径</string>
    <string name="load_wallet_by_mnemonic_help">什么是助记词？</string>
    <string name="load_wallet_already_exist">钱包已存在</string>
    <string name="load_wallet_by_official_wallet_keystore_hint">keystore 文本内容</string>
    <string name="load_wallet_by_official_wallet_keystore_tip">直接复制粘贴以太坊官方钱包keystore文件内容至输入框。或者通过生成keystore内容的二维码，扫描录入。</string>
    <string name="load_wallet_by_official_wallet_help">什么是keystore？</string>
    <string name="load_wallet_by_official_wallet_keystore_input_tip">keystore文件无效</string>
    <string name="load_wallet_by_private_key_input_tip">无效的私钥</string>
    <string name="load_wallet_by_private_key_hint">明文私钥</string>
    <string name="load_wallet_by_private_key_help">什么是私钥？</string>
    <string name="wallet_detail_wallet_name">钱包名</string>
    <string name="wallet_detail_modify_pwd">修改密码</string>
    <string name="wallet_detail_derive_private_key">导出私钥</string>
    <string name="wallet_detail_derive_keystore">导出keystore</string>
    <string name="create_wallet">创建钱包</string>
    <string name="first_use_wallet">第一次使用钱包</string>
    <string name="recover_wallet">恢复身份</string>
    <string name="create_your_wallet">创建你的钱包</string>
    <string name="create_your_wallet_tip">这就是其他电子钱包用户可以找到您并向您发送付款的方式。</string>
    <string name="guide_tip">最简单、最安全的加密钱包</string>
    <string name="already_have_wallet">已经拥有钱包</string>
    <string name="protect_your_wallet">保护你的钱包</string>
    <string name="identity_name">身份名</string>
    <string name="wallet_name">钱包密码</string>
    <string name="sure_password">重复输入密码</string>
    <string name="password">密码</string>
    <string name="Please_enter_transaction_password">请输入交易密码</string>
    <string name="backup_mnemonic">备份助记词</string>
    <string name="select_mnemonic_tip">请按照顺序选择助记词，确保备份正确</string>
    <string name="save_mnemonic_without_net">妥善保管助记词至隔离网络环境</string>
    <string name="no_share_mnemonic_with_net">请勿将助记词在联网环境下分享和储存</string>
    <string name="confirmed_backup">已确认备份</string>
    <string name="btn_confirm">确认</string>
    <string name="subtitle_from">付款地址</string>
    <string name="subtitle_to">目标地址</string>
    <string name="subtitle_gas_fee">矿工费 :</string>
    <string name="label_gas_limit">Gas Limit</string>
    <string name="label_gas_price">Gas Price</string>
</resources>