<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dapp_transfer_shape"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_net_work"
        android:textSize="21sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tip_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginEnd="25dp"
        android:lineSpacingExtra="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />


    <Button
        android:id="@+id/cancel_btb"
        style="@style/cancel_ButtonStyle"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/cancel_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_tv" />

    <Button
        android:id="@+id/sure_btn"
        style="@style/myButtonStyle"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginEnd="25dp"
        android:text="@string/sign_message"
        app:layout_constraintBottom_toBottomOf="@+id/cancel_btb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancel_btb" />
</androidx.constraintlayout.widget.ConstraintLayout>