<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:orientation="vertical">



    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="286dp"
        android:scaleType="centerCrop"
        android:src="@drawable/create_top_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/create_wallet_back_iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:padding="15dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="6dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/protect_your_wallet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/protect_your_wallet_tip"
        android:textColor="@color/sub_black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/et_wallet_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/create_wallet_etv_shape"
        android:hint="@string/identity_name"
        android:paddingLeft="12dp"
        android:textColor="@color/black"
        android:textColorHint="#999999"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/et_wallet_pwd"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/create_wallet_etv_shape"
        android:hint="@string/wallet_name"
        android:inputType="textPassword"
        android:paddingLeft="12dp"
        android:textColor="@color/black"
        android:textColorHint="#999999"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="@+id/et_wallet_name"
        app:layout_constraintStart_toStartOf="@+id/et_wallet_name"
        app:layout_constraintTop_toBottomOf="@+id/et_wallet_name" />

    <EditText
        android:id="@+id/et_wallet_pwd_again"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/create_wallet_etv_shape"
        android:hint="@string/sure_password"
        android:inputType="textPassword"
        android:paddingLeft="12dp"
        android:textColor="@color/black"
        android:textColorHint="#999999"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="@+id/et_wallet_pwd"
        app:layout_constraintStart_toStartOf="@+id/et_wallet_pwd"
        app:layout_constraintTop_toBottomOf="@+id/et_wallet_pwd" />


    <Button
        android:id="@+id/btn_create_wallet"
        style="@style/myButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/create_wallet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>