<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:background="@color/white"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>

	<LinearLayout
		android:id="@+id/linearLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="coincida"
				android:textColor="#0950F8"
				android:textSize="33sp"
				android:textStyle="bold" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:text="WALLET"
				android:textColor="@color/black"
				android:textSize="33sp"
				android:textStyle="bold" />
		</LinearLayout>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="20dp"
			android:gravity="center"
			android:text="@string/guide_tip"
			android:textColor="@color/black"
			android:textSize="17sp" />
	</LinearLayout>


	<TextView
		android:id="@+id/recover_wallet_tv"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:paddingBottom="70dp"
		android:text="@string/already_have_wallet"
		android:textColor="#ff2851e7"
		android:textSize="15sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<Button
		android:id="@+id/create_wallet_btn"
		style="@style/myButtonStyle"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="35dp"

		android:text="@string/create_wallet"
		app:layout_constraintBottom_toTopOf="@+id/recover_wallet_tv"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>